# rusty-knowledge

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_PRINCIPLES.md  BLOCK_SERDE.md  BROWSER_MODE_SUMMARY.md  CLAUDE.md  COVERAGE_IMPLEMENTATION.md  COVERAGE_QUICK_START.md  CUCUMBER_SETUP.md  Cargo.toml  DI_MIGRATION_SUMMARY.md  FIX_NOTIFICATIONS_PBT.md  GOALS.md  HTTP_VS_TAURI_IPC.md  IMPLEMENTATION_SUMMARY.md  LOGSEQ_STYLING_GUIDE.md  LOGSEQ_UI_ANALYSIS.md  LOGSEQ_UI_IMPLEMENTATION.md  MANUAL_CONSTRUCTION_AUDIT.md  MVPs.md  NAME_IDEAS.md  OPAQUE_BLOCKS_REFACTOR.md  OPERATION_REGISTRY_VS_DISPATCHER.md  OUTLINER_FLUTTER_INTERFACE.md  OUTLINER_FLUTTER_QUICK_START.md  OUTLINER_FLUTTER_RESEARCH.md  OUTLINER_INTEGRATION_SUMMARY.txt  OUTLINER_RESEARCH_INDEX.md  PLUGINS.md  QUICKSTART_BROWSER.md  REACTIVE_PRQL_OUTLINER.txt  REACTIVE_PRQL_RENDERING.md  README.md  README_BROWSER_MODE.md  README_TESTING.md  REFACTORING_SUMMARY.md  (+22 more)
crates/holon/: Cargo.toml  mutants.toml
crates/holon-api/: Cargo.toml
crates/holon-api/src/: block.rs  entity.rs  lib.rs  render_types.rs  streaming.rs
crates/holon-core/: Cargo.toml
crates/holon-core/src/: core.rs  fractional_index.rs  lib.rs  operation_log.rs  storage.rs  traits.rs  undo.rs
crates/holon-core/src/core/: datasource.rs
crates/holon-core/src/storage/: types.rs
crates/holon-filesystem/: Cargo.toml
crates/holon-filesystem/src/: directory.rs  error.rs  lib.rs
crates/holon-macros/: Cargo.toml
crates/holon-macros-test/: Cargo.toml
crates/holon-macros-test/src/: lib.rs
crates/holon-macros/src/: lib.rs
crates/holon-orgmode/: Cargo.toml
crates/holon-orgmode/queries/: orgmode_hierarchy.prql
crates/holon-orgmode/src/: di.rs  lib.rs  models.rs  orgmode_datasource.rs  orgmode_sync_provider.rs  parser.rs  writer.rs
crates/holon-orgmode/tests/: round_trip.rs  source_block_round_trip.rs
crates/holon-todoist/: Cargo.toml
crates/holon-todoist/queries/: todoist_hierarchy.prql
crates/holon-todoist/src/: README.md  client.rs  di.rs  fake.rs  fake_wrapper.rs  integration_test.rs  lib.rs  mod.rs  models.rs  operations_demo.rs  pbt_test.rs  provider_wrapper.rs  queries.rs  stream_integration_test.rs  todoist_datasource.rs  todoist_sync_provider.rs
crates/holon/examples/: test_file_storage.rs  test_loro_callback_with_lock.rs  test_loro_multiple_locks.rs  test_loro_subscription.rs
crates/holon/proptest-regressions/storage/: turso_tests.txt
crates/holon/queries/: undo_state.prql
crates/holon/src/: lib.rs  main.rs  tasks.rs
crates/holon/src/adapter/: mod.rs
crates/holon/src/api/: backend_engine.rs  loro_backend.rs  loro_backend_pbt.rs  memory_backend.rs  mod.rs  operation_dispatcher.rs  pbt_infrastructure.rs  repository.rs  tests.rs  types.rs  ui_types.rs
crates/holon/src/core/: datasource.rs  datasource_tests.rs  mod.rs  operation_log.rs  queryable_cache.rs  stream_cache.rs  test_macro.rs  traits.rs  unified_query.rs  updates.rs
crates/holon/src/di/: mod.rs  test_helpers.rs
crates/holon/src/examples/: mod.rs  task_queries.rs
crates/holon/src/operations/: row_view.rs
crates/holon/src/references/: resolver.rs  view_config.rs
crates/holon/src/storage/: backend.rs  command_sourcing.rs  command_sourcing_todo.md  mod.rs  schema.rs  sync_token_store.rs  task_datasource.rs  turso.rs  turso_pbt_tests.rs  turso_repro_test.rs  turso_tests.rs  types.rs
crates/holon/src/sync/: collaborative_doc.rs  external_system.rs
crates/holon/src/testing/: IMPLEMENTATION_SUMMARY.md  e2e_test_helpers.rs  generic_provider_state.rs  mod.rs
crates/holon/tests/: cucumber.rs  e2e_backend_engine_test.rs  integration_tests.rs  json_aggregation_e2e_test.rs  json_aggregation_test.rs  reliability_tests.rs  stress_tests.rs
crates/holon/tests/features/: task_management.feature
crates/holon/tests/steps/: mod.rs  task_steps.rs
crates/query-render/: Cargo.toml
crates/query-render/examples/: debug_parse.rs  outliner.rs  simple_task_list.rs  test_data_reference.rs  test_syntax.rs
crates/query-render/src/: compiler.rs  lib.rs  lineage.rs  parser.rs  types.rs
crates/rusty-knowledge/: :memory:-wal  Cargo.toml  file::memory:?cache=shared-wal  mutants.toml
crates/rusty-knowledge-macros/: Cargo.toml
crates/rusty-knowledge-macros-test/: Cargo.toml
crates/rusty-knowledge-macros-test/src/: lib.rs
crates/rusty-knowledge-macros/src/: lib.rs
crates/rusty-knowledge-todoist/: Cargo.toml
crates/rusty-knowledge-todoist/src/: client.rs  di.rs  fake.rs  fake_wrapper.rs  integration_test.rs  lib.rs  mod.rs  models.rs  operations_demo.rs  pbt_test.rs  provider_wrapper.rs  stream_integration_test.rs  todoist_datasource.rs  todoist_sync_provider.rs
crates/rusty-knowledge/examples/: test_file_storage.rs  test_loro_callback_with_lock.rs  test_loro_multiple_locks.rs  test_loro_subscription.rs
crates/rusty-knowledge/proptest-regressions/storage/: sqlite_tests.txt
crates/rusty-knowledge/src/: lib.rs  sync.rs  tasks.rs  tasks_sqlite.rs
crates/rusty-knowledge/src/adapter/: external_system.rs  mod.rs  sync_stats.rs
crates/rusty-knowledge/src/api/: backend_engine.rs  ffi_bridge.rs  loro_backend.rs  loro_backend_pbt.rs  memory_backend.rs  mod.rs  operation_dispatcher.rs  render_engine.rs  (+6 more)
crates/rusty-knowledge/tests/: README.md  cucumber.rs  integration_tests.rs  reliability_tests.rs  stress_tests.rs
frontends/flutter/rust/: Cargo.toml  TODO.md
frontends/tui/: Cargo.toml  README.md  REFACTORING.md  STREAM_INTEGRATION_GUIDE.md  STREAM_INTEGRATION_SUMMARY.md  TESTING_SUMMARY.md  TODO.md  test_interactive.exp
frontends/tui/config/: keybindings.yaml
frontends/tui/src/: TESTING.md  TESTING_PAGEOBJECT.md  app_main.rs  config.rs  launcher.rs  lib.rs  main.rs  render_interpreter.rs  state.rs  stylesheet.rs  tui_pbt_backend.rs  tui_pbt_state_machine.rs  ui_element.rs
frontends/tui/tests/: README.md  README_ANALYSIS.md  TESTING_IMPROVEMENTS_CHECKLIST.md  TESTING_PATTERNS_ANALYSIS.md  TESTING_QUICK_SUMMARY.md  navigation_test.rs  pty_infrastructure_test.rs  test_editable_text.rs  tui_pbt_test.rs
(+319 files in other folders)
