[package]
name = "holon-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = "0.25"
thiserror = "2.0"
tracing = "0.1"
tracing-opentelemetry = "0.26"
tokio = { version = "1", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1.89"
