[package]
name = "holon-filesystem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["fs", "sync"] }
walkdir = "2"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
holon = { path = "../holon" }
holon-macros = { path = "../holon-macros" }
holon-api = { path = "../holon-api" }

