[package]
name = "holon-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
query-render = { path = "../query-render" }
holon-api = { path = "../holon-api" }

[dev-dependencies]
holon = { path = "../holon" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "test-util"] }
