[package]
name = "holon-todoist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
opentelemetry = "0.25"
opentelemetry_sdk = "0.25"
tracing-opentelemetry = "0.25"
# Disable async feature for ferrous-di to avoid tokio/rt-multi-thread on WASM
ferrous-di = { path = "/Users/martin/Workspaces/rust/ferrous-di", default-features = false }

# Local dependencies
holon = { path = "../holon" }
holon-macros = { path = "../holon-macros" }
holon-api = { path = "../holon-api" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "default-tls"] }

# Use rustls instead of OpenSSL for Android (OpenSSL requires native compilation)
[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
proptest = "1.6"
proptest-state-machine = "0.5.0"
query-render = { path = "../query-render" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
integration-tests = []
