[package]
name = "rusty-knowledge-macros-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_knowledge_macros_test"
path = "src/lib.rs"

[dependencies]
rusty-knowledge-macros = { path = "../rusty-knowledge-macros" }
rusty-knowledge = { path = "../rusty-knowledge" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "test-util"] }
query-render = { path = "../query-render" }

