[package]
name = "rusty-knowledge-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
query-render = { path = "../query-render" }

[dev-dependencies]
rusty-knowledge = { path = "../rusty-knowledge" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "test-util"] }
