[package]
name = "rusty-knowledge-todoist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
ferrous-di = { path = "/Users/martin/Workspaces/rust/ferrous-di", features = ["async"] }

# Local dependencies
rusty-knowledge = { path = "../rusty-knowledge" }
rusty-knowledge-macros = { path = "../rusty-knowledge-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
proptest = "1.6"
proptest-state-machine = "0.5.0"
query-render = { path = "../query-render" }

[features]
integration-tests = []
