[package]
name = "rusty-knowledge"
version = "0.1.0"
edition = "2024"

[lib]
name = "rusty_knowledge"
path = "src/lib.rs"

[dependencies]
iroh = "0.93.2"
loro = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
rusty-knowledge-macros = { path = "../../rusty-knowledge-macros" }
reqwest = { version = "0.12", features = ["json"] }
similar = "2.7.0"
# PBT infrastructure needs proptest in regular dependencies for public API
proptest = "1.6"
proptest-state-machine = "0.5.0"

[dev-dependencies]
proptest = "1.6"
proptest-state-machine = "0.5.0"
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serial_test = "3.2"

[[test]]
name = "cucumber"
harness = false
